--- a/src/scss/variables/root.scss
+++ b/src/scss/variables/root.scss
@@ -74,6 +74,7 @@ body {
 	--header-height: 40px;
 
 	/* Metadata */
+	--metadata-label-width: 9rem;
 	--metadata-label-font-size: var(--font-adaptive-small);
 	--metadata-input-font-size: var(--font-adaptive-small);
 
